# name: TestFOSSTrends.test_breakdown_active_user_math_with_actions
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '') AS value,
            count(*) as count
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     INNER JOIN
       (SELECT id,
               argMax(properties, version) as person_props
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0) person ON pdi.person_id = person.id
     WHERE team_id = 2
       AND ((event = '$pageview'
             AND (has(['p1', 'p2', 'p3'], replaceRegexpAll(JSONExtractRaw(person_props, 'name'), '^"|"$', ''))
                  AND pdi.person_id IN
                    (SELECT id
                     FROM person
                     WHERE team_id = 2
                     GROUP BY id
                     HAVING max(is_deleted) = 0
                     AND ((has(['p1', 'p2'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), 'name'), '^"|"$', ''))))))))
       AND timestamp >= toDateTime('2020-01-01 00:00:00')
       AND timestamp <= toDateTime('2020-01-12 23:59:59')
     GROUP BY value
     ORDER BY count DESC, value DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: TestFOSSTrends.test_breakdown_active_user_math_with_actions.1
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data,
         breakdown_value
  FROM
    (SELECT SUM(total) as count,
            day_start,
            breakdown_value
     FROM
       (SELECT *
        FROM
          (SELECT toUInt16(0) AS total,
                  ticks.day_start as day_start,
                  breakdown_value
           FROM
             (SELECT toStartOfDay(toDateTime('2020-01-12 23:59:59', 'UTC') - number * 86400) as day_start
              FROM numbers(12)
              UNION ALL SELECT toStartOfDay(toDateTime('2020-01-01 00:00:00', 'UTC')) as day_start) as ticks
           CROSS JOIN
             (SELECT breakdown_value
              FROM
                (SELECT ['val'] as breakdown_value) ARRAY
              JOIN breakdown_value) as sec
           ORDER BY breakdown_value,
                    day_start
           UNION ALL SELECT counts as total,
                            timestamp as day_start,
                                         breakdown_value
           FROM
             (SELECT d.timestamp,
                     COUNT(DISTINCT person_id) counts,
                     breakdown_value
              FROM
                (SELECT toStartOfDay(toDateTime(timestamp), 'UTC') as timestamp
                 FROM events e
                 WHERE team_id = 2
                   AND timestamp >= '2019-12-25 00:00:00'
                   AND timestamp <= toDateTime('2020-01-12 23:59:59')
                 GROUP BY timestamp) d
              CROSS JOIN
                (SELECT toStartOfDay(toDateTime(timestamp), 'UTC') as timestamp,
                        pdi.person_id AS person_id,
                        replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '') as breakdown_value
                 FROM events e
                 INNER JOIN
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 2
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0) as pdi ON events.distinct_id = pdi.distinct_id
                 INNER JOIN
                   (SELECT id,
                           argMax(properties, version) as person_props
                    FROM person
                    WHERE team_id = 2
                    GROUP BY id
                    HAVING max(is_deleted) = 0) person ON person.id = pdi.person_id
                 WHERE e.team_id = 2
                   AND timestamp >= '2019-12-25 00:00:00'
                   AND timestamp <= toDateTime('2020-01-12 23:59:59')
                   AND ((event = '$pageview'
                         AND (has(['p1', 'p2', 'p3'], replaceRegexpAll(JSONExtractRaw(person_props, 'name'), '^"|"$', ''))
                              AND pdi.person_id IN
                                (SELECT id
                                 FROM person
                                 WHERE team_id = 2
                                 GROUP BY id
                                 HAVING max(is_deleted) = 0
                                 AND ((has(['p1', 'p2'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), 'name'), '^"|"$', ''))))))))
                 GROUP BY timestamp,
                          person_id,
                          breakdown_value) e
              WHERE e.timestamp <= d.timestamp
                AND e.timestamp > d.timestamp - INTERVAL 7 DAY
              GROUP BY d.timestamp,
                       breakdown_value
              ORDER BY d.timestamp)
           WHERE 11111 = 11111
             AND timestamp >= toTimezone(toDateTime(toStartOfDay(toDateTime('2020-01-01 00:00:00')), 'UTC'), 'UTC')
             AND timestamp <= toDateTime('2020-01-12 23:59:59') ))
     GROUP BY day_start,
              breakdown_value
     ORDER BY breakdown_value,
              day_start)
  GROUP BY breakdown_value
  ORDER BY breakdown_value
  '
---
# name: TestFOSSTrends.test_breakdown_filtering_with_properties_in_new_format
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(properties, '$current_url'), '^"|"$', '') AS value,
            count(*) as count
     FROM events e
     WHERE team_id = 2
       AND event = 'sign up'
       AND timestamp >= toDateTime('2019-12-22 00:00:00')
       AND timestamp <= toDateTime('2020-01-05 23:59:59')
       AND ((has(['Firefox'], replaceRegexpAll(JSONExtractRaw(e.properties, '$browser'), '^"|"$', ''))
             OR has(['Windows'], replaceRegexpAll(JSONExtractRaw(e.properties, '$os'), '^"|"$', '')))
            AND (has(['Mac'], replaceRegexpAll(JSONExtractRaw(e.properties, '$os'), '^"|"$', ''))))
     GROUP BY value
     ORDER BY count DESC, value DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: TestFOSSTrends.test_breakdown_filtering_with_properties_in_new_format.1
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data,
         breakdown_value
  FROM
    (SELECT SUM(total) as count,
            day_start,
            breakdown_value
     FROM
       (SELECT *
        FROM
          (SELECT toUInt16(0) AS total,
                  ticks.day_start as day_start,
                  breakdown_value
           FROM
             (SELECT toStartOfDay(toDateTime('2020-01-05 23:59:59', 'UTC') - number * 86400) as day_start
              FROM numbers(15)
              UNION ALL SELECT toStartOfDay(toDateTime('2019-12-22 00:00:00', 'UTC')) as day_start) as ticks
           CROSS JOIN
             (SELECT breakdown_value
              FROM
                (SELECT ['second url'] as breakdown_value) ARRAY
              JOIN breakdown_value) as sec
           ORDER BY breakdown_value,
                    day_start
           UNION ALL SELECT count(*) as total,
                            toStartOfDay(timestamp, 'UTC') as day_start,
                            replaceRegexpAll(JSONExtractRaw(properties, '$current_url'), '^"|"$', '') as breakdown_value
           FROM events e
           WHERE e.team_id = 2
             AND event = 'sign up'
             AND ((has(['Firefox'], replaceRegexpAll(JSONExtractRaw(e.properties, '$browser'), '^"|"$', ''))
                   OR has(['Windows'], replaceRegexpAll(JSONExtractRaw(e.properties, '$os'), '^"|"$', '')))
                  AND (has(['Mac'], replaceRegexpAll(JSONExtractRaw(e.properties, '$os'), '^"|"$', ''))))
             AND timestamp >= toTimezone(toDateTime(toStartOfDay(toDateTime('2019-12-22 00:00:00')), 'UTC'), 'UTC')
             AND timestamp <= toDateTime('2020-01-05 23:59:59')
             AND replaceRegexpAll(JSONExtractRaw(properties, '$current_url'), '^"|"$', '') in (['second url'])
           GROUP BY day_start,
                    breakdown_value))
     GROUP BY day_start,
              breakdown_value
     ORDER BY breakdown_value,
              day_start)
  GROUP BY breakdown_value
  ORDER BY breakdown_value
  '
---
# name: TestFOSSTrends.test_breakdown_filtering_with_properties_in_new_format.2
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(properties, '$current_url'), '^"|"$', '') AS value,
            count(*) as count
     FROM events e
     WHERE team_id = 2
       AND event = 'sign up'
       AND timestamp >= toDateTime('2019-12-22 00:00:00')
       AND timestamp <= toDateTime('2020-01-05 23:59:59')
       AND ((has(['Firefox'], replaceRegexpAll(JSONExtractRaw(e.properties, '$browser'), '^"|"$', ''))
             AND has(['Windows'], replaceRegexpAll(JSONExtractRaw(e.properties, '$os'), '^"|"$', '')))
            AND (has(['Mac'], replaceRegexpAll(JSONExtractRaw(e.properties, '$os'), '^"|"$', ''))))
     GROUP BY value
     ORDER BY count DESC, value DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: TestFOSSTrends.test_breakdown_filtering_with_properties_in_new_format.3
  '
  SELECT [now()] AS date,
         [0] AS data,
         '' AS breakdown_value
  LIMIT 0
  '
---
# name: TestFOSSTrends.test_person_property_filtering
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2020-01-04 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2019-12-28 00:00:00'), 'UTC'), toDateTime('2020-01-04 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2019-12-28 00:00:00'), 'UTC')
        UNION ALL SELECT count(*) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  pdi.person_id as person_id
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, version) as person_id
              FROM person_distinct_id2
              WHERE team_id = 2
              GROUP BY distinct_id
              HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
           INNER JOIN
             (SELECT id
              FROM person
              WHERE team_id = 2
              GROUP BY id
              HAVING max(is_deleted) = 0
              AND (has(['person1'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), 'name'), '^"|"$', '')))) person ON person.id = pdi.person_id
           WHERE team_id = 2
             AND event = 'watched movie'
             AND timestamp >= toTimezone(toDateTime(toStartOfDay(toDateTime('2019-12-28 00:00:00')), 'UTC'), 'UTC')
             AND timestamp <= toDateTime('2020-01-04 23:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: TestFOSSTrends.test_person_property_filtering_materialized
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2020-01-04 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2019-12-28 00:00:00'), 'UTC'), toDateTime('2020-01-04 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2019-12-28 00:00:00'), 'UTC')
        UNION ALL SELECT count(*) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  pdi.person_id as person_id
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, version) as person_id
              FROM person_distinct_id2
              WHERE team_id = 2
              GROUP BY distinct_id
              HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
           INNER JOIN
             (SELECT id
              FROM person
              WHERE team_id = 2
              GROUP BY id
              HAVING max(is_deleted) = 0
              AND (has(['person1'], argMax(person."pmat_name", _timestamp)))) person ON person.id = pdi.person_id
           WHERE team_id = 2
             AND event = 'watched movie'
             AND timestamp >= toTimezone(toDateTime(toStartOfDay(toDateTime('2019-12-28 00:00:00')), 'UTC'), 'UTC')
             AND timestamp <= toDateTime('2020-01-04 23:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: TestFOSSTrends.test_timezone_weekly
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfWeek(toDateTime('2020-01-26 23:59:59') - toIntervalWeek(number), 0, 'US/Pacific') AS day_start
        FROM numbers(dateDiff('week', toStartOfWeek(toDateTime('2020-01-12 08:00:00'), 0, 'US/Pacific'), toDateTime('2020-01-26 23:59:59'), 'US/Pacific'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfWeek(toDateTime('2020-01-12 08:00:00'), 0, 'US/Pacific')
        UNION ALL SELECT count(*) as data,
                         toStartOfWeek(toDateTime(timestamp), 0, 'US/Pacific') as date
        FROM
          (SELECT e.timestamp as timestamp
           FROM events e
           WHERE team_id = 2
             AND event = 'sign up'
             AND timestamp >= toTimezone(toDateTime(toStartOfWeek(toDateTime('2020-01-12 08:00:00'), 0), 'US/Pacific'), 'UTC')
             AND timestamp <= toDateTime('2020-01-26 23:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: TestFOSSTrends.test_timezones
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2020-01-05 23:59:59') - toIntervalDay(number), 'US/Pacific') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2019-12-29 08:00:00'), 'US/Pacific'), toDateTime('2020-01-05 23:59:59'), 'US/Pacific'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2019-12-29 08:00:00'), 'US/Pacific')
        UNION ALL SELECT count(*) as data,
                         toStartOfDay(toDateTime(timestamp), 'US/Pacific') as date
        FROM
          (SELECT e.timestamp as timestamp
           FROM events e
           WHERE team_id = 2
             AND event = 'sign up'
             AND timestamp >= toTimezone(toDateTime(toStartOfDay(toDateTime('2019-12-29 08:00:00')), 'US/Pacific'), 'UTC')
             AND timestamp <= toDateTime('2020-01-05 23:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: TestFOSSTrends.test_timezones.1
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2020-01-05 23:59:59') - toIntervalDay(number), 'US/Pacific') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2019-12-22 08:00:00'), 'US/Pacific'), toDateTime('2020-01-05 23:59:59'), 'US/Pacific'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2019-12-22 08:00:00'), 'US/Pacific')
        UNION ALL SELECT count(DISTINCT person_id) as data,
                         toStartOfDay(toDateTime(timestamp), 'US/Pacific') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  pdi.person_id as person_id
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, version) as person_id
              FROM person_distinct_id2
              WHERE team_id = 2
              GROUP BY distinct_id
              HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
           WHERE team_id = 2
             AND event = 'sign up'
             AND timestamp >= toTimezone(toDateTime(toStartOfDay(toDateTime('2019-12-22 08:00:00')), 'US/Pacific'), 'UTC')
             AND timestamp <= toDateTime('2020-01-05 23:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: TestFOSSTrends.test_timezones.2
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2020-01-05 23:59:59') - toIntervalDay(number), 'US/Pacific') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2019-12-29 08:00:00'), 'US/Pacific'), toDateTime('2020-01-05 23:59:59'), 'US/Pacific'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2019-12-29 08:00:00'), 'US/Pacific')
        UNION ALL SELECT counts as total,
                         timestamp as day_start
        FROM
          (SELECT d.timestamp,
                  COUNT(DISTINCT person_id) counts
           FROM
             (SELECT toStartOfDay(toDateTime(timestamp, 'US/Pacific')) as timestamp
              FROM events
              WHERE team_id = 2
                AND timestamp >= '2019-12-22 00:00:00'
                AND timestamp <= toDateTime('2020-01-05 23:59:59')
              GROUP BY timestamp) d
           CROSS JOIN
             (SELECT toStartOfDay(toDateTime(timestamp, 'US/Pacific')) as timestamp,
                     person_id
              FROM
                (SELECT e.timestamp as timestamp,
                        pdi.person_id as person_id
                 FROM events e
                 INNER JOIN
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 2
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
                 WHERE team_id = 2
                   AND event = 'sign up'
                   AND timestamp >= '2019-12-22 00:00:00'
                   AND timestamp <= toDateTime('2020-01-05 23:59:59') ) events
              WHERE 1 = 1
                AND timestamp >= '2019-12-22 00:00:00'
                AND timestamp <= toDateTime('2020-01-05 23:59:59')
              GROUP BY timestamp,
                       person_id) e
           WHERE e.timestamp <= d.timestamp
             AND e.timestamp > d.timestamp - INTERVAL 7 DAY
           GROUP BY d.timestamp
           ORDER BY d.timestamp)
        WHERE 1 = 1
          AND timestamp >= toTimezone(toDateTime(toStartOfDay(toDateTime('2019-12-29 08:00:00')), 'US/Pacific'), 'UTC')
          AND timestamp <= toDateTime('2020-01-05 23:59:59') )
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: TestFOSSTrends.test_timezones.3
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2020-01-05 23:59:59') - toIntervalDay(number), 'US/Pacific') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2019-12-29 08:00:00'), 'US/Pacific'), toDateTime('2020-01-05 23:59:59'), 'US/Pacific'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2019-12-29 08:00:00'), 'US/Pacific')
        UNION ALL SELECT count(*) as data,
                         toStartOfDay(toDateTime(timestamp), 'US/Pacific') as date
        FROM
          (SELECT e.timestamp as timestamp
           FROM events e
           WHERE team_id = 2
             AND event = 'sign up'
             AND timestamp >= toTimezone(toDateTime(toStartOfDay(toDateTime('2019-12-29 08:00:00')), 'US/Pacific'), 'UTC')
             AND timestamp <= toDateTime('2020-01-05 23:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: TestFOSSTrends.test_timezones.4
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(properties, '$os'), '^"|"$', '') AS value,
            count(*) as count
     FROM events e
     WHERE team_id = 2
       AND event = 'sign up'
       AND timestamp >= toDateTime('2019-12-29 08:00:00')
       AND timestamp <= toDateTime('2020-01-05 23:59:59')
     GROUP BY value
     ORDER BY count DESC, value DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: TestFOSSTrends.test_timezones.5
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data,
         breakdown_value
  FROM
    (SELECT SUM(total) as count,
            day_start,
            breakdown_value
     FROM
       (SELECT *
        FROM
          (SELECT toUInt16(0) AS total,
                  ticks.day_start as day_start,
                  breakdown_value
           FROM
             (SELECT toStartOfDay(toDateTime('2020-01-05 23:59:59', 'US/Pacific') - number * 86400) as day_start
              FROM numbers(8)
              UNION ALL SELECT toStartOfDay(toDateTime('2019-12-29 08:00:00', 'US/Pacific')) as day_start) as ticks
           CROSS JOIN
             (SELECT breakdown_value
              FROM
                (SELECT ['Mac'] as breakdown_value) ARRAY
              JOIN breakdown_value) as sec
           ORDER BY breakdown_value,
                    day_start
           UNION ALL SELECT count(DISTINCT pdi.person_id) as total,
                            toStartOfDay(timestamp, 'US/Pacific') as day_start,
                            replaceRegexpAll(JSONExtractRaw(properties, '$os'), '^"|"$', '') as breakdown_value
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, version) as person_id
              FROM person_distinct_id2
              WHERE team_id = 2
              GROUP BY distinct_id
              HAVING argMax(is_deleted, version) = 0) as pdi ON events.distinct_id = pdi.distinct_id
           WHERE e.team_id = 2
             AND event = 'sign up'
             AND timestamp >= toTimezone(toDateTime(toStartOfDay(toDateTime('2019-12-29 08:00:00')), 'US/Pacific'), 'UTC')
             AND timestamp <= toDateTime('2020-01-05 23:59:59')
             AND replaceRegexpAll(JSONExtractRaw(properties, '$os'), '^"|"$', '') in (['Mac'])
           GROUP BY day_start,
                    breakdown_value))
     GROUP BY day_start,
              breakdown_value
     ORDER BY breakdown_value,
              day_start)
  GROUP BY breakdown_value
  ORDER BY breakdown_value
  '
---
# name: TestFOSSTrends.test_timezones.6
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfHour(toDateTime('2020-01-04 07:59:59') - toIntervalHour(number), 'US/Pacific') AS day_start
        FROM numbers(dateDiff('hour', toStartOfHour(toDateTime('2020-01-03 08:00:00'), 'US/Pacific'), toDateTime('2020-01-04 07:59:59'), 'US/Pacific'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfHour(toDateTime('2020-01-03 08:00:00'), 'US/Pacific')
        UNION ALL SELECT count(*) as data,
                         toStartOfHour(toDateTime(timestamp), 'US/Pacific') as date
        FROM
          (SELECT e.timestamp as timestamp
           FROM events e
           WHERE team_id = 2
             AND event = 'sign up'
             AND timestamp >= toTimezone(toDateTime(toStartOfHour(toDateTime('2020-01-03 08:00:00')), 'US/Pacific'), 'UTC')
             AND timestamp <= toDateTime('2020-01-04 07:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: TestFOSSTrends.test_timezones.7
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2020-01-04 07:59:59') - toIntervalDay(number), 'US/Pacific') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2020-01-03 08:00:00'), 'US/Pacific'), toDateTime('2020-01-04 07:59:59'), 'US/Pacific'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2020-01-03 08:00:00'), 'US/Pacific')
        UNION ALL SELECT count(*) as data,
                         toStartOfDay(toDateTime(timestamp), 'US/Pacific') as date
        FROM
          (SELECT e.timestamp as timestamp
           FROM events e
           WHERE team_id = 2
             AND event = 'sign up'
             AND timestamp >= toDateTime('2020-01-03 08:00:00')
             AND timestamp <= toDateTime('2020-01-04 07:59:59') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: TestFOSSTrends.test_timezones_hourly
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfHour(toDateTime('2020-01-05 18:02:01') - toIntervalHour(number), 'US/Pacific') AS day_start
        FROM numbers(dateDiff('hour', toStartOfHour(toDateTime('2020-01-05 08:00:00'), 'US/Pacific'), toDateTime('2020-01-05 18:02:01'), 'US/Pacific'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfHour(toDateTime('2020-01-05 08:00:00'), 'US/Pacific')
        UNION ALL SELECT count(DISTINCT person_id) as data,
                         toStartOfHour(toDateTime(timestamp), 'US/Pacific') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  pdi.person_id as person_id
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, version) as person_id
              FROM person_distinct_id2
              WHERE team_id = 2
              GROUP BY distinct_id
              HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
           WHERE team_id = 2
             AND event = 'sign up'
             AND timestamp >= toTimezone(toDateTime(toStartOfHour(toDateTime('2020-01-05 08:00:00')), 'US/Pacific'), 'UTC')
             AND timestamp <= toDateTime('2020-01-05 18:02:01') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: TestFOSSTrends.test_timezones_hourly.1
  '
  /* user_id:692 request:_api_projects_695_actions_people_ */
  SELECT person_id AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            pdi.person_id as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     WHERE team_id = 2
       AND event = 'sign up'
       AND timestamp >= toDateTime('2020-01-05 15:00:00')
       AND timestamp <= toDateTime('2020-01-05 16:00:00') )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
# name: TestFOSSTrends.test_timezones_hourly.2
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfHour(toDateTime('2020-01-05 18:02:01') - toIntervalHour(number), 'US/Pacific') AS day_start
        FROM numbers(dateDiff('hour', toStartOfHour(toDateTime('2020-01-05 08:00:00'), 'US/Pacific'), toDateTime('2020-01-05 18:02:01'), 'US/Pacific'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfHour(toDateTime('2020-01-05 08:00:00'), 'US/Pacific')
        UNION ALL SELECT count(*) as data,
                         toStartOfHour(toDateTime(timestamp), 'US/Pacific') as date
        FROM
          (SELECT e.timestamp as timestamp
           FROM events e
           WHERE team_id = 2
             AND event = 'sign up'
             AND timestamp >= toTimezone(toDateTime(toStartOfHour(toDateTime('2020-01-05 08:00:00')), 'US/Pacific'), 'UTC')
             AND timestamp <= toDateTime('2020-01-05 18:02:01') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: TestFOSSTrends.test_trend_breakdown_user_props_with_filter_with_partial_property_pushdowns
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(person_props, 'email'), '^"|"$', '') AS value,
            count(*) as count
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     INNER JOIN
       (SELECT id,
               argMax(properties, version) as person_props
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0
        AND ((has(['android'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), '$os'), '^"|"$', ''))
              OR has(['safari'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), '$browser'), '^"|"$', ''))))) person ON pdi.person_id = person.id
     WHERE team_id = 2
       AND event = 'sign up'
       AND timestamp >= toDateTime('2020-01-01 00:00:00')
       AND timestamp <= toDateTime('2020-07-01 00:00:00')
       AND ((NOT (replaceRegexpAll(JSONExtractRaw(person_props, 'email'), '^"|"$', '') ILIKE '%@posthog.com%')
             OR has(['val'], replaceRegexpAll(JSONExtractRaw(e.properties, 'key'), '^"|"$', ''))))
     GROUP BY value
     ORDER BY count DESC, value DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: TestFOSSTrends.test_trend_breakdown_user_props_with_filter_with_partial_property_pushdowns.1
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data,
         breakdown_value
  FROM
    (SELECT SUM(total) as count,
            day_start,
            breakdown_value
     FROM
       (SELECT *
        FROM
          (SELECT toUInt16(0) AS total,
                  ticks.day_start as day_start,
                  breakdown_value
           FROM
             (SELECT toStartOfDay(toDateTime('2020-07-01 00:00:00', 'UTC') - number * 86400) as day_start
              FROM numbers(183)
              UNION ALL SELECT toStartOfDay(toDateTime('2020-01-01 00:00:00', 'UTC')) as day_start) as ticks
           CROSS JOIN
             (SELECT breakdown_value
              FROM
                (SELECT ['test2@posthog.com', 'test@gmail.com', 'test5@posthog.com', 'test4@posthog.com', 'test3@posthog.com'] as breakdown_value) ARRAY
              JOIN breakdown_value) as sec
           ORDER BY breakdown_value,
                    day_start
           UNION ALL SELECT count(*) as total,
                            toStartOfDay(timestamp, 'UTC') as day_start,
                            replaceRegexpAll(JSONExtractRaw(person_props, 'email'), '^"|"$', '') as breakdown_value
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, version) as person_id
              FROM person_distinct_id2
              WHERE team_id = 2
              GROUP BY distinct_id
              HAVING argMax(is_deleted, version) = 0) as pdi ON events.distinct_id = pdi.distinct_id
           INNER JOIN
             (SELECT id,
                     argMax(properties, version) as person_props
              FROM person
              WHERE team_id = 2
              GROUP BY id
              HAVING max(is_deleted) = 0
              AND ((has(['android'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), '$os'), '^"|"$', ''))
                    OR has(['safari'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), '$browser'), '^"|"$', ''))))) person ON person.id = pdi.person_id
           WHERE e.team_id = 2
             AND event = 'sign up'
             AND ((NOT (replaceRegexpAll(JSONExtractRaw(person_props, 'email'), '^"|"$', '') ILIKE '%@posthog.com%')
                   OR has(['val'], replaceRegexpAll(JSONExtractRaw(e.properties, 'key'), '^"|"$', ''))))
             AND timestamp >= toTimezone(toDateTime(toStartOfDay(toDateTime('2020-01-01 00:00:00')), 'UTC'), 'UTC')
             AND timestamp <= toDateTime('2020-07-01 00:00:00')
             AND replaceRegexpAll(JSONExtractRaw(person_props, 'email'), '^"|"$', '') in (['test2@posthog.com', 'test@gmail.com', 'test5@posthog.com', 'test4@posthog.com', 'test3@posthog.com'])
           GROUP BY day_start,
                    breakdown_value))
     GROUP BY day_start,
              breakdown_value
     ORDER BY breakdown_value,
              day_start)
  GROUP BY breakdown_value
  ORDER BY breakdown_value
  '
---
# name: TestFOSSTrends.test_trend_breakdown_user_props_with_filter_with_partial_property_pushdowns.2
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(person_props, 'email'), '^"|"$', '') AS value,
            count(*) as count
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     INNER JOIN
       (SELECT id,
               argMax(properties, version) as person_props
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0
        AND (((has(['android'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), '$os'), '^"|"$', ''))
               AND has(['chrome'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), '$browser'), '^"|"$', ''))))
             AND (replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), 'email'), '^"|"$', '') ILIKE '%@posthog.com%'))) person ON pdi.person_id = person.id
     WHERE team_id = 2
       AND event = 'sign up'
       AND timestamp >= toDateTime('2020-01-01 00:00:00')
       AND timestamp <= toDateTime('2020-07-01 00:00:00')
       AND ((has(['val'], replaceRegexpAll(JSONExtractRaw(e.properties, 'key'), '^"|"$', ''))))
     GROUP BY value
     ORDER BY count DESC, value DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: TestFOSSTrends.test_trend_breakdown_user_props_with_filter_with_partial_property_pushdowns.3
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data,
         breakdown_value
  FROM
    (SELECT SUM(total) as count,
            day_start,
            breakdown_value
     FROM
       (SELECT *
        FROM
          (SELECT toUInt16(0) AS total,
                  ticks.day_start as day_start,
                  breakdown_value
           FROM
             (SELECT toStartOfDay(toDateTime('2020-07-01 00:00:00', 'UTC') - number * 86400) as day_start
              FROM numbers(183)
              UNION ALL SELECT toStartOfDay(toDateTime('2020-01-01 00:00:00', 'UTC')) as day_start) as ticks
           CROSS JOIN
             (SELECT breakdown_value
              FROM
                (SELECT ['test2@posthog.com'] as breakdown_value) ARRAY
              JOIN breakdown_value) as sec
           ORDER BY breakdown_value,
                    day_start
           UNION ALL SELECT count(*) as total,
                            toStartOfDay(timestamp, 'UTC') as day_start,
                            replaceRegexpAll(JSONExtractRaw(person_props, 'email'), '^"|"$', '') as breakdown_value
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, version) as person_id
              FROM person_distinct_id2
              WHERE team_id = 2
              GROUP BY distinct_id
              HAVING argMax(is_deleted, version) = 0) as pdi ON events.distinct_id = pdi.distinct_id
           INNER JOIN
             (SELECT id,
                     argMax(properties, version) as person_props
              FROM person
              WHERE team_id = 2
              GROUP BY id
              HAVING max(is_deleted) = 0
              AND (((has(['android'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), '$os'), '^"|"$', ''))
                     AND has(['chrome'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), '$browser'), '^"|"$', ''))))
                   AND (replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), 'email'), '^"|"$', '') ILIKE '%@posthog.com%'))) person ON person.id = pdi.person_id
           WHERE e.team_id = 2
             AND event = 'sign up'
             AND ((has(['val'], replaceRegexpAll(JSONExtractRaw(e.properties, 'key'), '^"|"$', ''))))
             AND timestamp >= toTimezone(toDateTime(toStartOfDay(toDateTime('2020-01-01 00:00:00')), 'UTC'), 'UTC')
             AND timestamp <= toDateTime('2020-07-01 00:00:00')
             AND replaceRegexpAll(JSONExtractRaw(person_props, 'email'), '^"|"$', '') in (['test2@posthog.com'])
           GROUP BY day_start,
                    breakdown_value))
     GROUP BY day_start,
              breakdown_value
     ORDER BY breakdown_value,
              day_start)
  GROUP BY breakdown_value
  ORDER BY breakdown_value
  '
---
# name: TestFOSSTrends.test_trends_breakdown_with_session_property_single_aggregate_math_and_breakdown
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(properties, '$some_property'), '^"|"$', '') AS value,
            quantile(0.50)(session_duration) as count
     FROM events e
     INNER JOIN
       (SELECT $session_id,
               dateDiff('second', min(timestamp), max(timestamp)) as session_duration
        FROM events
        WHERE $session_id != ''
          AND team_id = 2
          AND timestamp >= toDateTime('2019-12-28 00:00:00') - INTERVAL 24 HOUR
          AND timestamp <= toDateTime('2020-01-04 23:59:59') + INTERVAL 24 HOUR
        GROUP BY $session_id) AS sessions ON sessions.$session_id = e.$session_id
     WHERE team_id = 2
       AND event = 'sign up'
       AND timestamp >= toDateTime('2019-12-28 00:00:00')
       AND timestamp <= toDateTime('2020-01-04 23:59:59')
     GROUP BY value
     ORDER BY count DESC, value DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: TestFOSSTrends.test_trends_breakdown_with_session_property_single_aggregate_math_and_breakdown.1
  '
  
  SELECT quantile(0.50)(session_duration) AS total,
         breakdown_value
  FROM
    (SELECT any(session_duration) as session_duration,
            breakdown_value
     FROM
       (SELECT $session_id,
               session_duration,
               replaceRegexpAll(JSONExtractRaw(properties, '$some_property'), '^"|"$', '') AS breakdown_value
        FROM events e
        INNER JOIN
          (SELECT $session_id,
                  dateDiff('second', min(timestamp), max(timestamp)) as session_duration
           FROM events
           WHERE $session_id != ''
             AND team_id = 2
             AND timestamp >= toDateTime('2019-12-28 00:00:00') - INTERVAL 24 HOUR
             AND timestamp <= toDateTime('2020-01-04 23:59:59') + INTERVAL 24 HOUR
           GROUP BY $session_id) sessions ON sessions.$session_id = e.$session_id
        WHERE e.team_id = 2
          AND event = 'sign up'
          AND timestamp >= toTimezone(toDateTime(toStartOfWeek(toDateTime('2019-12-28 00:00:00'), 0), 'UTC'), 'UTC')
          AND timestamp <= toDateTime('2020-01-04 23:59:59')
          AND replaceRegexpAll(JSONExtractRaw(properties, '$some_property'), '^"|"$', '') in (['value2', 'value1', '']) )
     GROUP BY $session_id,
              breakdown_value)
  GROUP BY breakdown_value
  ORDER BY breakdown_value
  '
---
# name: TestFOSSTrends.test_trends_breakdown_with_session_property_single_aggregate_math_and_breakdown.2
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(properties, '$some_property'), '^"|"$', '') AS value,
            quantile(0.50)(session_duration) as count
     FROM events e
     INNER JOIN
       (SELECT $session_id,
               dateDiff('second', min(timestamp), max(timestamp)) as session_duration
        FROM events
        WHERE $session_id != ''
          AND team_id = 2
          AND timestamp >= toDateTime('2019-12-28 00:00:00') - INTERVAL 24 HOUR
          AND timestamp <= toDateTime('2020-01-04 23:59:59') + INTERVAL 24 HOUR
        GROUP BY $session_id) AS sessions ON sessions.$session_id = e.$session_id
     WHERE team_id = 2
       AND event = 'sign up'
       AND timestamp >= toDateTime('2019-12-28 00:00:00')
       AND timestamp <= toDateTime('2020-01-04 23:59:59')
     GROUP BY value
     ORDER BY count DESC, value DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: TestFOSSTrends.test_trends_breakdown_with_session_property_single_aggregate_math_and_breakdown.3
  '
  
  SELECT quantile(0.50)(session_duration) AS total,
         breakdown_value
  FROM
    (SELECT any(session_duration) as session_duration,
            breakdown_value
     FROM
       (SELECT $session_id,
               session_duration,
               replaceRegexpAll(JSONExtractRaw(properties, '$some_property'), '^"|"$', '') AS breakdown_value
        FROM events e
        INNER JOIN
          (SELECT $session_id,
                  dateDiff('second', min(timestamp), max(timestamp)) as session_duration
           FROM events
           WHERE $session_id != ''
             AND team_id = 2
             AND timestamp >= toDateTime('2019-12-28 00:00:00') - INTERVAL 24 HOUR
             AND timestamp <= toDateTime('2020-01-04 23:59:59') + INTERVAL 24 HOUR
           GROUP BY $session_id) sessions ON sessions.$session_id = e.$session_id
        WHERE e.team_id = 2
          AND event = 'sign up'
          AND timestamp >= toTimezone(toDateTime(toStartOfDay(toDateTime('2019-12-28 00:00:00')), 'UTC'), 'UTC')
          AND timestamp <= toDateTime('2020-01-04 23:59:59')
          AND replaceRegexpAll(JSONExtractRaw(properties, '$some_property'), '^"|"$', '') in (['value2', 'value1', '']) )
     GROUP BY $session_id,
              breakdown_value)
  GROUP BY breakdown_value
  ORDER BY breakdown_value
  '
---
# name: TestFOSSTrends.test_trends_with_session_property_single_aggregate_math
  '
  
  SELECT quantile(0.50)(session_duration) as data
  FROM
    (SELECT any(session_duration) as session_duration
     FROM
       (SELECT e.timestamp as timestamp,
               e."properties" as "properties",
               sessions.session_duration as session_duration,
               sessions.$session_id as $session_id
        FROM events e
        INNER JOIN
          (SELECT $session_id,
                  dateDiff('second', min(timestamp), max(timestamp)) as session_duration
           FROM events
           WHERE $session_id != ''
             AND team_id = 2
             AND timestamp >= toDateTime('2019-12-28 00:00:00') - INTERVAL 24 HOUR
             AND timestamp <= toDateTime('2020-01-04 23:59:59') + INTERVAL 24 HOUR
           GROUP BY $session_id) as sessions ON sessions.$session_id = e.$session_id
        WHERE team_id = 2
          AND event = 'sign up'
          AND timestamp >= toTimezone(toDateTime(toStartOfWeek(toDateTime('2019-12-28 00:00:00'), 0), 'UTC'), 'UTC')
          AND timestamp <= toDateTime('2020-01-04 23:59:59') ) events
     GROUP BY $session_id)
  '
---
# name: TestFOSSTrends.test_trends_with_session_property_single_aggregate_math.1
  '
  
  SELECT quantile(0.50)(session_duration) as data
  FROM
    (SELECT any(session_duration) as session_duration
     FROM
       (SELECT e.timestamp as timestamp,
               e."properties" as "properties",
               sessions.session_duration as session_duration,
               sessions.$session_id as $session_id
        FROM events e
        INNER JOIN
          (SELECT $session_id,
                  dateDiff('second', min(timestamp), max(timestamp)) as session_duration
           FROM events
           WHERE $session_id != ''
             AND team_id = 2
             AND timestamp >= toDateTime('2019-12-28 00:00:00') - INTERVAL 24 HOUR
             AND timestamp <= toDateTime('2020-01-04 23:59:59') + INTERVAL 24 HOUR
           GROUP BY $session_id) as sessions ON sessions.$session_id = e.$session_id
        WHERE team_id = 2
          AND event = 'sign up'
          AND timestamp >= toTimezone(toDateTime(toStartOfDay(toDateTime('2019-12-28 00:00:00')), 'UTC'), 'UTC')
          AND timestamp <= toDateTime('2020-01-04 23:59:59') ) events
     GROUP BY $session_id)
  '
---
# name: TestFOSSTrends.test_trends_with_session_property_total_volume_math
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfWeek(toDateTime('2020-01-04 23:59:59') - toIntervalWeek(number), 0, 'UTC') AS day_start
        FROM numbers(dateDiff('week', toStartOfWeek(toDateTime('2019-12-28 00:00:00'), 0, 'UTC'), toDateTime('2020-01-04 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfWeek(toDateTime('2019-12-28 00:00:00'), 0, 'UTC')
        UNION ALL SELECT quantile(0.50)(session_duration) as data, date
        FROM
          (SELECT toStartOfWeek(toDateTime(timestamp), 0, 'UTC') as date,
                  any(session_duration) as session_duration
           FROM
             (SELECT e.timestamp as timestamp,
                     e."properties" as "properties",
                     sessions.session_duration as session_duration,
                     sessions.$session_id as $session_id
              FROM events e
              INNER JOIN
                (SELECT $session_id,
                        dateDiff('second', min(timestamp), max(timestamp)) as session_duration
                 FROM events
                 WHERE $session_id != ''
                   AND team_id = 2
                   AND timestamp >= toDateTime('2019-12-28 00:00:00') - INTERVAL 24 HOUR
                   AND timestamp <= toDateTime('2020-01-04 23:59:59') + INTERVAL 24 HOUR
                 GROUP BY $session_id) as sessions ON sessions.$session_id = e.$session_id
              WHERE team_id = 2
                AND event = 'sign up'
                AND timestamp >= toTimezone(toDateTime(toStartOfWeek(toDateTime('2019-12-28 00:00:00'), 0), 'UTC'), 'UTC')
                AND timestamp <= toDateTime('2020-01-04 23:59:59') )
           GROUP BY $session_id, date)
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: TestFOSSTrends.test_trends_with_session_property_total_volume_math.1
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2020-01-04 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2019-12-28 00:00:00'), 'UTC'), toDateTime('2020-01-04 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2019-12-28 00:00:00'), 'UTC')
        UNION ALL SELECT quantile(0.50)(session_duration) as data, date
        FROM
          (SELECT toStartOfDay(toDateTime(timestamp), 'UTC') as date,
                  any(session_duration) as session_duration
           FROM
             (SELECT e.timestamp as timestamp,
                     e."properties" as "properties",
                     sessions.session_duration as session_duration,
                     sessions.$session_id as $session_id
              FROM events e
              INNER JOIN
                (SELECT $session_id,
                        dateDiff('second', min(timestamp), max(timestamp)) as session_duration
                 FROM events
                 WHERE $session_id != ''
                   AND team_id = 2
                   AND timestamp >= toDateTime('2019-12-28 00:00:00') - INTERVAL 24 HOUR
                   AND timestamp <= toDateTime('2020-01-04 23:59:59') + INTERVAL 24 HOUR
                 GROUP BY $session_id) as sessions ON sessions.$session_id = e.$session_id
              WHERE team_id = 2
                AND event = 'sign up'
                AND timestamp >= toTimezone(toDateTime(toStartOfDay(toDateTime('2019-12-28 00:00:00')), 'UTC'), 'UTC')
                AND timestamp <= toDateTime('2020-01-04 23:59:59') )
           GROUP BY $session_id, date)
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: TestFOSSTrends.test_trends_with_session_property_total_volume_math_with_breakdowns
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(properties, '$some_property'), '^"|"$', '') AS value,
            quantile(0.50)(session_duration) as count
     FROM events e
     INNER JOIN
       (SELECT $session_id,
               dateDiff('second', min(timestamp), max(timestamp)) as session_duration
        FROM events
        WHERE $session_id != ''
          AND team_id = 2
          AND timestamp >= toDateTime('2019-12-28 00:00:00') - INTERVAL 24 HOUR
          AND timestamp <= toDateTime('2020-01-04 23:59:59') + INTERVAL 24 HOUR
        GROUP BY $session_id) AS sessions ON sessions.$session_id = e.$session_id
     WHERE team_id = 2
       AND event = 'sign up'
       AND timestamp >= toDateTime('2019-12-28 00:00:00')
       AND timestamp <= toDateTime('2020-01-04 23:59:59')
     GROUP BY value
     ORDER BY count DESC, value DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: TestFOSSTrends.test_trends_with_session_property_total_volume_math_with_breakdowns.1
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data,
         breakdown_value
  FROM
    (SELECT SUM(total) as count,
            day_start,
            breakdown_value
     FROM
       (SELECT *
        FROM
          (SELECT toUInt16(0) AS total,
                  ticks.day_start as day_start,
                  breakdown_value
           FROM
             (SELECT toStartOfWeek(toDateTime('2020-01-04 23:59:59', 'UTC') - number * 604800) as day_start
              FROM numbers(2)
              UNION ALL SELECT toStartOfWeek(toDateTime('2019-12-28 00:00:00', 'UTC')) as day_start) as ticks
           CROSS JOIN
             (SELECT breakdown_value
              FROM
                (SELECT ['value2', 'value1'] as breakdown_value) ARRAY
              JOIN breakdown_value) as sec
           ORDER BY breakdown_value,
                    day_start
           UNION ALL SELECT quantile(0.50)(session_duration) as total,
                            day_start,
                            breakdown_value
           FROM
             (SELECT any(session_duration) as session_duration,
                     day_start,
                     breakdown_value
              FROM
                (SELECT $session_id,
                        session_duration,
                        toStartOfWeek(timestamp, 0, 'UTC') as day_start,
                        replaceRegexpAll(JSONExtractRaw(properties, '$some_property'), '^"|"$', '') as breakdown_value
                 FROM events e
                 INNER JOIN
                   (SELECT $session_id,
                           dateDiff('second', min(timestamp), max(timestamp)) as session_duration
                    FROM events
                    WHERE $session_id != ''
                      AND team_id = 2
                      AND timestamp >= toDateTime('2019-12-28 00:00:00') - INTERVAL 24 HOUR
                      AND timestamp <= toDateTime('2020-01-04 23:59:59') + INTERVAL 24 HOUR
                    GROUP BY $session_id) sessions ON sessions.$session_id = e.$session_id
                 WHERE e.team_id = 2
                   AND event = 'sign up'
                   AND timestamp >= toTimezone(toDateTime(toStartOfWeek(toDateTime('2019-12-28 00:00:00'), 0), 'UTC'), 'UTC')
                   AND timestamp <= toDateTime('2020-01-04 23:59:59')
                   AND replaceRegexpAll(JSONExtractRaw(properties, '$some_property'), '^"|"$', '') in (['value2', 'value1']) )
              GROUP BY $session_id,
                       day_start,
                       breakdown_value)
           GROUP BY day_start,
                    breakdown_value))
     GROUP BY day_start,
              breakdown_value
     ORDER BY breakdown_value,
              day_start)
  GROUP BY breakdown_value
  ORDER BY breakdown_value
  '
---
# name: TestFOSSTrends.test_trends_with_session_property_total_volume_math_with_breakdowns.2
  '
  
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(properties, '$some_property'), '^"|"$', '') AS value,
            quantile(0.50)(session_duration) as count
     FROM events e
     INNER JOIN
       (SELECT $session_id,
               dateDiff('second', min(timestamp), max(timestamp)) as session_duration
        FROM events
        WHERE $session_id != ''
          AND team_id = 2
          AND timestamp >= toDateTime('2019-12-28 00:00:00') - INTERVAL 24 HOUR
          AND timestamp <= toDateTime('2020-01-04 23:59:59') + INTERVAL 24 HOUR
        GROUP BY $session_id) AS sessions ON sessions.$session_id = e.$session_id
     WHERE team_id = 2
       AND event = 'sign up'
       AND timestamp >= toDateTime('2019-12-28 00:00:00')
       AND timestamp <= toDateTime('2020-01-04 23:59:59')
     GROUP BY value
     ORDER BY count DESC, value DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: TestFOSSTrends.test_trends_with_session_property_total_volume_math_with_breakdowns.3
  '
  
  SELECT groupArray(day_start) as date,
         groupArray(count) as data,
         breakdown_value
  FROM
    (SELECT SUM(total) as count,
            day_start,
            breakdown_value
     FROM
       (SELECT *
        FROM
          (SELECT toUInt16(0) AS total,
                  ticks.day_start as day_start,
                  breakdown_value
           FROM
             (SELECT toStartOfDay(toDateTime('2020-01-04 23:59:59', 'UTC') - number * 86400) as day_start
              FROM numbers(8)
              UNION ALL SELECT toStartOfDay(toDateTime('2019-12-28 00:00:00', 'UTC')) as day_start) as ticks
           CROSS JOIN
             (SELECT breakdown_value
              FROM
                (SELECT ['value2', 'value1'] as breakdown_value) ARRAY
              JOIN breakdown_value) as sec
           ORDER BY breakdown_value,
                    day_start
           UNION ALL SELECT quantile(0.50)(session_duration) as total,
                            day_start,
                            breakdown_value
           FROM
             (SELECT any(session_duration) as session_duration,
                     day_start,
                     breakdown_value
              FROM
                (SELECT $session_id,
                        session_duration,
                        toStartOfDay(timestamp, 'UTC') as day_start,
                        replaceRegexpAll(JSONExtractRaw(properties, '$some_property'), '^"|"$', '') as breakdown_value
                 FROM events e
                 INNER JOIN
                   (SELECT $session_id,
                           dateDiff('second', min(timestamp), max(timestamp)) as session_duration
                    FROM events
                    WHERE $session_id != ''
                      AND team_id = 2
                      AND timestamp >= toDateTime('2019-12-28 00:00:00') - INTERVAL 24 HOUR
                      AND timestamp <= toDateTime('2020-01-04 23:59:59') + INTERVAL 24 HOUR
                    GROUP BY $session_id) sessions ON sessions.$session_id = e.$session_id
                 WHERE e.team_id = 2
                   AND event = 'sign up'
                   AND timestamp >= toTimezone(toDateTime(toStartOfDay(toDateTime('2019-12-28 00:00:00')), 'UTC'), 'UTC')
                   AND timestamp <= toDateTime('2020-01-04 23:59:59')
                   AND replaceRegexpAll(JSONExtractRaw(properties, '$some_property'), '^"|"$', '') in (['value2', 'value1']) )
              GROUP BY $session_id,
                       day_start,
                       breakdown_value)
           GROUP BY day_start,
                    breakdown_value))
     GROUP BY day_start,
              breakdown_value
     ORDER BY breakdown_value,
              day_start)
  GROUP BY breakdown_value
  ORDER BY breakdown_value
  '
---
